// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokenize > should work 1`] = `
{
  "result": {
    "videoResolution": "1080p",
  },
  "tokens": [
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Lilith-Raws",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "熊熊勇闖異世界",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "PUNCH！",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "/",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Kuma",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Kuma",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Kuma",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Bear",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "S02",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "-",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "02",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Baha",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "WEB-DL",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Identifier",
      "content": "1080p",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "AVC",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "AAC",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "CHT",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "MP4",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
  ],
}
`;

exports[`tokenize > should work 2`] = `
{
  "result": {},
  "tokens": [
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "ANi",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "機動戰士鋼彈",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "水星的魔女",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Season",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "2",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "-",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "13",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "1080P",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Baha",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "WEB-DL",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "AAC",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "AVC",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "CHT",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "MP4",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
  ],
}
`;

exports[`tokenize > should work 3`] = `
{
  "result": {},
  "tokens": [
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "爱恋字幕社",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "4月新番",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "魔法使的新娘2",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Mahoutsukai",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "no",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Yome",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "S2",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "01",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "1080P",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "MP4",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "GB",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "简中",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
  ],
}
`;

exports[`tokenize > should work 4`] = `
{
  "result": {
    "videoResolution": "1080p",
  },
  "tokens": [
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "桜都字幕组",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "总之就是非常可爱",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "S2",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "/",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Tonikaku",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "Kawaii",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Unknown",
      "content": "S2",
      "enclosed": false,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": false,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "01",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Identifier",
      "content": "1080p",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "简体内嵌",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
  ],
}
`;

exports[`tokenize > should work 5`] = `
{
  "result": {
    "videoResolution": "720p",
  },
  "tokens": [
    {
      "category": "Bracket",
      "content": "【",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "喵萌奶茶屋",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "】",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "★04月新番★",
      "enclosed": false,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "百合是我的工作！/我的百合乃工作是也！/私の百合はお仕事です！/Watashi",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "no",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Yuri",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "wa",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "Oshigoto",
      "enclosed": true,
    },
    {
      "category": "Delimiter",
      "content": " ",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "desu!",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "01",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Identifier",
      "content": "720p",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "繁日雙語",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "[",
      "enclosed": true,
    },
    {
      "category": "Unknown",
      "content": "招募翻譯校對",
      "enclosed": true,
    },
    {
      "category": "Bracket",
      "content": "]",
      "enclosed": true,
    },
  ],
}
`;
